Änderungen von Rechner 1 (V2)

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.8.3",
-        "updated": "2026-01-25 20:09:30"
+        "version": "1.8.4",
+        "updated": "2026-01-25 23:58:46"
     },
     "txwelcome": "Welcome",
     "quotes": [
@@ -242,7 +242,7 @@
     "txanleitungprg": "[DF]Gordon's Sun Clock[~LF]Version [VERSIONNUM][~LF]Gordon Axmann[~LF]Copyright 2019-[VERSIONYEAR]",
     "txanleitung3": "[DF]Please use the software as it is. It is a free, private offer. I am not a professional app developer, but I have put a lot of heart and soul into the programme over the years.[DF][DF]",
     "txchangelog": "What's new?",
-    "txanleitung4": "[DF]No data are collected or transmitted. Everything stays on your device. Not even an internet connection is required for operation. One exception: in the event of a program error, if you have internet access, an anonymous error report is sent (see privacy policy for details). This helps to keep {txsunclock-} running smoothly.[~LF][~LF]If you have found an error, I will be happy to correct it. For this I need a clear error report (optionally with a screenshot) and a short description of where and when the error occurred. A screenshot of the status log shown below, taken as soon as possible after the error occurs, is also helpful (mail contact: [CONTACTSUPPORT]). - Notes about alleged calculation errors are false reports in 99% of cases; unfortunately there is a great deal of misinformation about astronomical calculations.[~LF][~LF]Thanks to: Brandon Rhodes (Skyfield), Rolf, Greg Miller and all testers. Images of celestial bodies provided by: NASA / SOHO (Solar and Heliospheric Observatory), ESA / Hubble Space Telescope and NASA / JPL-Caltech (public domain). Weather data (optional): Open-Meteo.com (CC BY 4.0), MET Norway / Meteorologisk institutt (CC BY 4.0). A list of all third-party materials and licences used can be found in the file \"design/ COPYRIGHT.txt\".[~LF][~LF]I provide {txsunclock} to you free of charge. Simply enjoy it. If you would like to express your appreciation for my work, you can find my web presence here:[DF][DF]",
+    "txanleitung4": "[DF]No data is collected or transmitted. Everything stays on your device. An internet connection is not required for operation. Exceptions: (1) In case of a program error, an anonymous error report is sent if you have internet access. This helps keep {txsunclock-} running smoothly. (2) The weather display (optional, enabled by default) retrieves weather data from an external provider and transmits your approximate location. You can disable the weather display at any time (see privacy policy for details).[~LF][~LF]If you find an error, I am happy to fix it. I need a clear bug report (possibly with a screenshot) and a short description of where and when the issue occurred. A screenshot of the status log below, taken as soon as possible after the error, is also helpful (contact: [CONTACTSUPPORT]). – Reports of supposed calculation errors are false in 99% of cases; unfortunately, there is a lot of misinformation about astronomical calculations.[~LF][~LF]Thanks to: Brandon Rhodes (Skyfield), Rolf, Greg Miller and all testers. Images of celestial bodies provided by: NASA / SOHO (Solar and Heliospheric Observatory), ESA / Hubble Space Telescope, and NASA / JPL-Caltech (public domain). Weather data (optional): Open-Meteo.com (CC BY 4.0), MET Norway / Meteorologisk institutt (CC BY 4.0). A complete list of third-party materials and licenses can be found in the file \"design/COPYRIGHT.txt\".[~LF][~LF]{txsunclock} is provided free of charge. Simply enjoy using it. If you wish to express appreciation for my work, you can find my website here:[DF][DF]",
     "txkaffee": "Visit website",
     "solcalmonthsxx": [
         "% New Febru",
