--- a/lang/de.json
+++ b/lang/de.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.8.5",
-        "updated": "2026-01-26 00:28:28"
+        "version": "1.8.6",
+        "updated": "2026-01-26 12:08:41"
     },
     "txwelcome": "Willkommen",
     "quotes": [
@@ -56,16 +56,16 @@
     ],
     "tx_acc": [
         "% Standort",
-        "% Uhr",
+        "% Uhrzeit",
         "% Aussehen",
-        "% Modi"
+        "% Funktionen"
     ],
     "txgps_label": "GPS (lat, lon) oder Ortsname",
     "txgpsauto": "Auto-Ortung",
     "txgpsautosh": "AUTO",
     "txtimezone": "Zeitzone",
     "txtimeformat": "24h-Format",
-    "txsiformat": "Metrisch (°C, km/h)",
+    "txsiformat": "Metrische Werte",
     "txshowclock": "Uhrzeit anzeigen",
     "txwelcomescr": "GPS-Hinweis aus",
     "txshowagni": "Agnihotra (GPS)",
@@ -91,8 +91,8 @@
     },
     "txweathapi": "Wetter",
     "txweathapiarr": {
-        "auto": "automatisch",
         "-NIL-": "aus",
+        "auto": "automatisch",
         "openmeteo": "Open-Met/Icon-D2",
         "metno": "MET Norge"
     },
@@ -140,8 +140,8 @@
     "txpartsupport": "[i]HINWEIS: (β) Diese Sprache ist nur teilweise unterstützt. Daher sind einige Abschnitte auf Englisch. Unterstützung ist willkommen (Github). - Auf der letzten Seite finden Sie einen Knopf „Auto-Übersetzung“[/i]",
     "txnosupport": "[i]HINWEIS: Ihre Sprache wird noch nicht unterstützt, daher wird Englisch angezeigt. Auf der letzten Seite finden Sie einen Knopf „Auto-Übersetzung“[/i]",
     "uebanleitung": "Anleitung",
-    "txanleitung": "[DF]{LANGSUPPORT}1. Setzen Sie das Häkchen bei {txgpsauto}, um Ihren Standort während der Nutzung automatisch zu aktualisieren ({quotes|0-}{tx_acc|3-}/{txagnihotra-}{quotes|1-} für genauere Ortsbestimmung und GPS Zeitabgleich). {txgpsbutton} bestimmt Ihre aktuelle Position einmalig und übernimmt diese fest.[~LF][~LF]Alternativ können Sie einen Ortsnamen oder eine Adresse in das Textfeld eingeben (wenn Ihr Gerät dies unterstützt) oder Koordinaten (z.B. 50.94, 6.96). Ein 3. und 4. Eintrag sind optional: die grobe Höhe [m], die ungefähre Temperatur bei Dämmerung [°C]. Anschließend setzen Sie das Häkchen bei {txwelcomescr}. - Bei Änderungen grundlegender Daten führt {txsunclock-} eine Tagesberechnung durch, die je nach Gerät zwischen 2[NDASH]30 Sekunden dauern kann.[~LF][~LF]2. {txuhrsinn} legt fest, ob die Uhr im Uhrzeigersinn läuft (Süden) oder dagegen: Wenn Sie die Drehrichtung ändern, liegt jedoch der unter dem Horizont liegende Teil des Sonnenkreises vor Ihnen (Details s. nächste Seite). {txshowclock} blendet oben rechts auf dem Ziffernblatt eine Digitaluhr ein.",
-    "txmore": "[DF]3. {txfarben} wählt verschiedene Ziffernblätter. {txnachtmodus} {txlangarr|auto-} wechselt bei Sonnenuntergang, -6° zum Ende der Dämmerung, +6° davor. [~LF][~LF]4. {txagnihotra} zeigt Markierungen für den Sonnenzeiger sowie die Zeit des nächsten Nulldurchlaufs der Sonne & Countdown. Sechs Minuten vor Agnihotra werden Anzeige vergrößert und Sekunden eingeblendet (⁺ heißt GPS aktuell). {txfullscr} verhindert das Ausschalten des Bildschirms und schaltet auf Vollbild. {txweathapi} blendet eine Tagesvorhersage auf der Uhr ein (sofern Sie Netz haben). Wird diese grau, sind die Daten alt. - Falls Ihre Einstellungen einmal nicht übernommen werden, tippen Sie auf dem Ziffernblatt unten rechts auf den Aktualisierungsknopf.[~LF][~LF]In das Ziffernblatt können Sie mit zwei Fingern hineinzoomen (oder mit Dreifachtipp). Wenn Sie das gezoomte Bild verschieben wollen, machen Sie es langsam. Schnelle Bewegungen wischen zur nächsten Seite. - Auf der nächsten Seite finden Sie eine Erklärung des Ziffernblatts.[DF][DF][DF][b]–– Legende Ziffernblatt:[/b][DF][DF]Wetter: aktuelle Temperatur + darüber Tagesdaten: Niederschlag (χ = Schnee), Sonnenstd. sowie Symbole (Kaktus = trocken) und ev. Wochentag (= Wetter für morgen), grau = ältere Daten",
+    "txanleitung": "[DF]{LANGSUPPORT}1. Setzen Sie das Häkchen bei {txgpsauto}, um Ihren Standort während der Nutzung automatisch zu aktualisieren. ({txgpsbutton} bestimmt Ihre aktuelle Position einmalig und übernimmt diese fest.) Mehr ist erst einmal nicht nötig. - Für höhere Genauigkeit s. {quotes|0-}{tx_acc|3-}/{txshowagni-}{quotes|1-}.[~LF][~LF]Alternativ können Sie einen Ortsnamen oder eine Adresse in das Textfeld eingeben (wenn Ihr Gerät dies unterstützt) oder Koordinaten (z.B. 50.94, 6.96). Ein 3. und 4. Eintrag sind optional: die grobe Höhe [m], die ungefähre Temperatur bei Dämmerung [°C]. Anschließend setzen Sie das Häkchen bei {txwelcomescr}. - Bei Änderungen grundlegender Daten führt {txsunclock-} eine Tagesberechnung durch, die je nach Gerät zwischen 2[NDASH]30 Sekunden dauern kann.[~LF][~LF]2. {txshowclock} blendet oben rechts auf dem Ziffernblatt eine Digitaluhr ein. {txuhrsinn} legt fest, ob die Uhr im Uhrzeigersinn läuft (Süden) oder dagegen: Wenn Sie die Drehrichtung ändern, liegt der unter dem Horizont liegende Teil des Sonnenkreises vor Ihnen (Details s. nächste Seite).",
+    "txmore": "[DF]3. {txnachtmodus} {txlangarr|auto-} wechselt bei Sonnenuntergang, -6° zum Ende der Dämmerung, +6° davor. {txfarben} wählt verschiedene Ziffernblätter.[~LF][~LF]4. {txfullscr} verhindert das Ausschalten des Bildschirms und schaltet auf Vollbild. {txweathapi} blendet eine Vorhersage auf der Uhr ein (Netz notwendig, grau = alte Daten). {txagnihotra} zeigt Markierungen für den Sonnenzeiger sowie die Zeit des nächsten Nulldurchlaufs der Sonne & Countdown. Sechs Minuten vor Agnihotra wird die Anzeige vergrößert und Sekunden eingeblendet (⁺ = GPS aktuell). - Falls Ihre Einstellungen einmal nicht übernommen werden, tippen Sie auf dem Ziffernblatt auf den Aktualisierungsknopf unten rechts.[~LF][~LF]In das Ziffernblatt können Sie mit zwei Fingern hineinzoomen (oder mit Dreifachtipp). Wenn Sie das gezoomte Bild verschieben wollen, machen Sie es langsam. Schnelle Bewegungen wischen zur nächsten Seite. - Auf der nächsten Seite finden Sie eine Erklärung des Ziffernblatts.[DF][DF][DF][b]–– Legende Ziffernblatt:[/b][DF][DF]Wetter: aktuelle Temperatur + darüber Tagesdaten: Niederschlag (χ = Schnee), Sonnenstd. sowie Symbole (Kaktus = trocken) und ev. Wochentag (= Wetter für morgen), grau = ältere Daten",
     "txdata": "[DF]Daten",
     "txlocdata": "[DF]Berechnungen für Ihren Standort stimmen mit dem astronomischen Almanach auf ca. 0,0005 Bogensekunden überein³:[DF]",
     "txobjdata": "– Sonne¹ –[~LF]Uhrzeit: {sun_clocktm}[~LF]Temporalstunde: {sun_temptm}[~LF]Lichttag: {sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]Sonnenwende: {sun_soli}[~LF]Nachtgleiche: {sun_equi}[~LF][~LF]– Mond² –[~LF]Neumond: {moon_new}[~LF]Vollmond: {moon_full}[~LF]Mondnacht: {moon_gordon}[~LF]Beleuchtet: {moon_illum}[~LF]Größe: {moon_sizep} (85-100){weather_data}[~LF][~LF]– Helligkeit –[~LF]Venus: {venus_magp} (83-100)[~LF]Mars: {mars_magp} (52-100)[~LF]Jupiter: {jupiter_magp} (87-100)[~LF]Saturn: {saturn_magp} (77-100)[~LF]Merkur: {merkur_magp} (0-100)[~LF][~LF]¹ Uhrzeit: GPS = synchronisiert | Temporalstunde: lokale, ungleiche Stunde (0,0[NDASH]11,9) „ἡ“ des Tages oder „ν“ der Nacht. „φ“ Nachtwache mit ungleichen „Minuten“ (0φ00[NDASH]3φ59) | {lighttime-}: s.u. | Lichttag & Agnihotra: Aufgang[NDASH]Untergang heute [Aufgang morgen], ⁺ = aktuelles GPS | ² Voll- und Neumond: Zeitpunkt (in/vor Tagen) | Mondnacht: s.u. | ³ Mond ist ca. 2000 Bogensek. groß | ⁴ Wetter: Tagesverlauf (Sonne, Fortschritt, Regen, Wind), Jetzt (= nächste 3 Stunden). - Tageswerte: min...max...[Nachtmin] (χ = Schnee)[DF][DF]",
@@ -222,7 +222,7 @@
     "txanleitungprg": "[DF]Gordons Sonnenuhr[~LF]Version [VERSIONNUM][~LF]Gordon Axmann[~LF]Copyright 2019-[VERSIONYEAR]",
     "txanleitung3": "[DF]Diese Software ist ein kostenloses, privates Projekt. Sie wurde über viele Jahre hinweg entwickelt und gepflegt.[DF][DF]",
     "txchangelog": "Was ist neu?",
-    "txanleitung4": "[DF]Grundsätzlich werden keine personenbezogenen Daten erhoben oder gesendet. Alles bleibt auf Ihrem Gerät. Für den Betrieb ist nicht einmal eine Internetverbindung nötig. Ausnahmen: (1) Bei einem Programmfehler wird – sofern Sie Internet haben – eine stark anonymisierte Fehlermeldung gesendet, um die Stabilität von {txsunclock-} zu verbessern. (2) Die Wetteranzeige (optional, per Voreinstellung aktiv) ruft Wetterdaten von einem externen Anbieter ab und übermittelt dabei Ihren ungefähren Standort. Sie können die Wetteranzeige jederzeit deaktivieren (Details siehe Datenschutzrichtlinie).[~LF][~LF]Danke an: Brandon Rhodes (Skyfield), Rolf, Greg Miller und alle Tester. Bilder der Himmelskörper bereitgestellt von: NASA / SOHO (Solar and Heliospheric Observatory), ESA / Hubble-Weltraumteleskop und NASA / JPL-Caltech (gemeinfrei). Wetterdaten (optional): Open-Meteo.com (CC BY 4.0), MET Norway / Meteorologisk institutt (CC BY 4.0). Eine Auflistung aller verwendeten Materialien von Drittanbietern und Lizenzen finden Sie in der Datei \"design / COPYRIGHT.txt\".[~LF][~LF]Ich stelle Ihnen {txsunclock} kostenlos zur Verfügung. Haben Sie einfach Freude an ihr. Wenn Sie meine Arbeit unterstützen möchten, finden Sie hier meine Webpräsenz:[DF][DF]",
+    "txanleitung4": "[DF]Grundsätzlich werden keine personenbezogenen Daten erhoben oder gezielt gesendet. Alles bleibt auf Ihrem Gerät. Für den Betrieb ist nicht einmal eine Internetverbindung nötig. Ausnahmen: (1) Bei einem Programmfehler wird – sofern Sie Internet haben – eine stark anonymisierte Fehlermeldung gesendet, um die Stabilität von {txsunclock-} zu verbessern. (2) Die Wetteranzeige (per Voreinstellung aktiv) ruft Wetterdaten von einem externen Anbieter ab. Wenn Sie {txgpsauto-} aktivieren, wird hierfür Ihr ungefährer Standort (ca. 1 km Genauigkeit, Details siehe Datenschutzrichtlinie) verwendet. Sie können die Wetteranzeige jederzeit deaktivieren.[~LF][~LF]Danke an: Brandon Rhodes (Skyfield), Rolf, Greg Miller und alle Tester. Bilder der Himmelskörper bereitgestellt von: NASA / SOHO (Solar and Heliospheric Observatory), ESA / Hubble-Weltraumteleskop und NASA / JPL-Caltech (gemeinfrei). Wetterdaten (optional): Open-Meteo.com (CC BY 4.0), MET Norway / Meteorologisk institutt (CC BY 4.0). Eine Auflistung aller verwendeten Materialien von Drittanbietern und Lizenzen finden Sie in der Datei \"design / COPYRIGHT.txt\".[~LF][~LF]Ich stelle Ihnen {txsunclock} kostenlos zur Verfügung. Haben Sie einfach Freude an ihr. Wenn Sie meine Arbeit unterstützen möchten, finden Sie hier meine Webpräsenz:[DF][DF]",
     "txkaffee": "Zur Webpräsenz",
     "solcalmonthsxx": [
         "% Neufebru",
