--- a/lang/en.json
+++ b/lang/en.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.8.5",
-        "updated": "2026-01-26 00:28:28"
+        "version": "1.8.6",
+        "updated": "2026-01-26 12:08:41"
     },
     "txwelcome": "Welcome",
     "quotes": [
@@ -63,16 +63,16 @@
     ],
     "tx_acc": [
         "% Location",
-        "% Clock",
+        "% Time",
         "% Appearance",
-        "% Modes"
+        "% Functions"
     ],
     "txgps_label": "GPS (lat, lon) or place name",
     "txgpsauto": "Auto-locate",
     "txgpsautosh": "AUTO",
     "txtimezone": "Time zone",
     "txtimeformat": "24h format",
-    "txsiformat": "Metric (°C, km/h)",
+    "txsiformat": "Metric units",
     "txshowclock": "Show time",
     "txwelcomescr": "Hide GPS notice",
     "txshowagni": "Agnihotra (GPS)",
@@ -146,8 +146,8 @@
     "txpartsupport": "[i]NOTE: (β) This language is only partially supported. Therefore, some sections are in English. Support is welcome (Github). - On the last page, you will find an ‘Auto-Translate’ button[/i]",
     "txnosupport": "[i]NOTE: Your language is not yet supported, so English is shown. An ‘Auto-Translate’ button is available on the last page[/i]",
     "uebanleitung": "Instructions",
-    "txanleitung": "[DF]{LANGSUPPORT}1. Tick {txgpsauto} to automatically update your location during use ({quotes|0-}{tx_acc|3-}/{txagnihotra-}{quotes|1-} for more accurate positioning and GPS time synchronization). {txgpsbutton} determines your current position once and saves it permanently.[~LF][~LF]Alternatively, you can enter a place name or an address in the text field (if your device supports this) or coordinates (e.g. 50.94, 6.96). A 3rd and 4th entry are optional: the approximate altitude [m], the approximate temperature at twilight [°C]. Then tick {txwelcomescr}. - When basic data is changed, {txsunclock-} performs a daily calculation which, depending on the device, can take between 2[NDASH]30 seconds.[~LF][~LF]2. {txuhrsinn} determines whether the clock runs clockwise (South) or counter-clockwise: however, if you change the rotation direction, the part of the solar circle below the horizon will be in front of you (details see next page). {txshowclock} shows a digital clock at the top right of the dial.",
-    "txmore": "[DF]3. {txfarben} selects different dials. {txnachtmodus} {txlangarr|auto-} switches at sunset, -6° until the end of twilight, +6° before. [~LF][~LF]4. {txagnihotra} shows markers for the sun pointer and the time of the next zero crossing of the sun & countdown. Six minutes before Agnihotra, the display is enlarged and seconds are shown (⁺ means GPS current). {txfullscr} prevents the screen from turning off and switches to fullscreen. {txweathapi} overlays a daily weather forecast on the dial (if network is available). If it turns grey, the data is outdated. – If settings are not applied, tap the refresh button at the bottom right of the dial.[~LF][~LF]You can zoom into the dial with two fingers (or triple-tap). To move the zoomed image, do it slowly. Fast movements switch to the next page. – On the next page you will find an explanation of the dial.[DF][DF][DF][b]–– Dial legend:[/b][DF][DF]Weather: current temperature + above daily data: precipitation (χ = snow), sunshine hours, symbols (cactus = dry) and optional weekday (= weather for tomorrow), grey = older data",
+    "txanleitung": "[DF]{LANGSUPPORT}1. Tick {txgpsauto} to automatically update your location during use. ({txgpsbutton} determines your current position once and stores it.) Nothing more is required for now. - For higher accuracy see {quotes|0-}{tx_acc|3-}/{txshowagni-}{quotes|1-}.[~LF][~LF]Alternatively, you can enter a place name or address into the text field (if supported by your device) or coordinates (e.g. 50.94, 6.96). A 3rd and 4th entry are optional: approximate altitude [m], approximate temperature at twilight [°C]. Afterwards, tick {txwelcomescr}. - When changing fundamental data, {txsunclock-} performs a daily recalculation, which may take between 2[NDASH]30 seconds depending on the device.[~LF][~LF]2. {txshowclock} displays a digital clock in the top right corner of the dial. {txuhrsinn} defines whether the clock runs clockwise (south) or counter-clockwise: if you change the rotation direction, the part of the solar circle below the horizon will be in front of you (details see next page).",
+    "txmore": "[DF]3. {txnachtmodus} {txlangarr|auto-} switches automatically at sunset, -6° until the end of twilight, +6° before. {txfarben} selects different dial designs.[~LF][~LF]4. {txfullscr} prevents the screen from turning off and switches to fullscreen. {txweathapi} overlays a weather forecast on the clock (network required, grey = outdated data). {txagnihotra} shows markers for the sun pointer as well as the time of the next solar zero crossing & countdown. Six minutes before Agnihotra, the display is enlarged and seconds are shown (⁺ = GPS current). - If your settings are not applied, tap the refresh button at the bottom right of the dial.[~LF][~LF]You can zoom into the dial with two fingers (or triple tap). To move the zoomed image, do so slowly. Fast movements swipe to the next page. - The next page contains an explanation of the dial.[DF][DF][DF][b]–– Dial legend:[/b][DF][DF]Weather: current temperature + above it daily data: precipitation (χ = snow), sunshine hours, symbols (cactus = dry) and optionally weekday (= tomorrow’s weather), grey = older data",
     "txdata": "[DF]Data",
     "txlocdata": "[DF]Calculations for your location match the astronomical almanac to approx. 0.0005 arcseconds³:[DF]",
     "txobjdata": "– Sun¹ –[~LF]Time: {sun_clocktm}[~LF]Temporal hour: {sun_temptm}[~LF]Light day: {sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]Solstice: {sun_soli}[~LF]Equinox: {sun_equi}[~LF][~LF]– Moon² –[~LF]New moon: {moon_new}[~LF]Full moon: {moon_full}[~LF]Moon night: {moon_gordon}[~LF]Illuminated: {moon_illum}[~LF]Size: {moon_sizep} (85-100){weather_data}[~LF][~LF]– Brightness –[~LF]Venus: {venus_magp} (83-100)[~LF]Mars: {mars_magp} (52-100)[~LF]Jupiter: {jupiter_magp} (87-100)[~LF]Saturn: {saturn_magp} (77-100)[~LF]Mercury: {merkur_magp} (0-100)[~LF][~LF]¹ Time: GPS = synchronised | Temporal hour: local unequal hour (0.0[NDASH]11.9) “ἡ” of day or “ν” of night. “φ” night watch with unequal “minutes” (0φ00[NDASH]3φ59) | {lighttime-}: see below | Light day & Agnihotra: rise[NDASH]set today [rise tomorrow], ⁺ = current GPS | ² Full and new moon: timing (in/before days) | Moon night: see below | ³ Moon is approx. 2000 arcseconds in size | ⁴ Weather: daily course (sun, progress, rain, wind), Now (= next 3 hours). – Daily values: min...max...[night min] (χ = snow)[DF][DF]",
@@ -242,7 +242,7 @@
     "txanleitungprg": "[DF]Gordon's Sun Clock[~LF]Version [VERSIONNUM][~LF]Gordon Axmann[~LF]Copyright 2019-[VERSIONYEAR]",
     "txanleitung3": "[DF]This software is a free, private project. It has been developed and maintained over many years.[DF][DF]",
     "txchangelog": "What’s new?",
-    "txanleitung4": "[DF]As a general rule, no personal data is collected or transmitted. Everything remains on your device. An internet connection is not even required for operation. Exceptions: (1) In the event of a program error, a highly anonymised error report is sent – provided you have internet access – in order to improve the stability of {txsunclock-}. (2) The weather display (optional, enabled by default) retrieves weather data from an external provider and transmits your approximate location in the process. You can disable the weather display at any time (see privacy policy for details).[~LF][~LF]Thanks to: Brandon Rhodes (Skyfield), Rolf, Greg Miller and all testers. Images of celestial bodies provided by: NASA / SOHO (Solar and Heliospheric Observatory), ESA / Hubble Space Telescope and NASA / JPL-Caltech (public domain). Weather data (optional): Open-Meteo.com (CC BY 4.0), MET Norway / Meteorologisk institutt (CC BY 4.0). A list of all third-party materials used and their licences can be found in the file \"design / COPYRIGHT.txt\".[~LF][~LF]I provide {txsunclock} to you free of charge. Simply enjoy using it. If you would like to support my work, you can find my website here:[DF][DF]",
+    "txanleitung4": "[DF]As a general rule, no personal data are collected or deliberately transmitted. Everything remains on your device. An internet connection is not required for normal operation. Exceptions: (1) In the event of a software error, a strongly anonymised error report is sent – provided you have an internet connection – to help improve the stability of {txsunclock-}. (2) The weather display (enabled by default) retrieves weather data from an external provider. If you enable {txgpsauto-}, your approximate location (about 1 km accuracy; see privacy policy for details) is used for this purpose. You can disable the weather display at any time.[~LF][~LF]Thanks to: Brandon Rhodes (Skyfield), Rolf, Greg Miller and all testers. Images of celestial bodies provided by: NASA / SOHO (Solar and Heliospheric Observatory), ESA / Hubble Space Telescope and NASA / JPL-Caltech (public domain). Weather data (optional): Open-Meteo.com (CC BY 4.0), MET Norway / Meteorologisk institutt (CC BY 4.0). A list of all third-party materials and licenses used can be found in the file \"design / COPYRIGHT.txt\".[~LF][~LF]{txsunclock} is provided free of charge. Simply enjoy it. If you would like to support my work, you can find my website here:[DF][DF]",
     "txkaffee": "Visit website",
     "solcalmonthsxx": [
         "% New Febru",
