--- a/lang/zh.json
+++ b/lang/zh.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.8.5",
-        "updated": "2026-01-26 00:28:28"
+        "version": "1.8.6",
+        "updated": "2026-01-26 12:08:41"
     },
     "txwelcome": "欢迎",
     "quotes": [
@@ -69,16 +69,16 @@
     ],
     "tx_acc": [
         "% 位置",
-        "% 时钟",
+        "% 时间",
         "% 外观",
-        "% 模式"
+        "% 功能"
     ],
     "txgps_label": "GPS（纬度、经度）或地点名称",
     "txgpsauto": "自动定位",
     "txgpsautosh": "自动",
     "txtimezone": "时区",
     "txtimeformat": "24小时制",
-    "txsiformat": "公制（°C，km/h）",
+    "txsiformat": "公制单位",
     "txshowclock": "显示时间",
     "txwelcomescr": "关闭GPS提示",
     "txshowagni": "阿格尼霍特拉（GPS）",
@@ -153,8 +153,8 @@
     "txpartsupport": "[i]注意：(β) 此语言仅提供部分支持。因此，部分内容为英文。欢迎提供支持（Github）。- 在最后一页，您会看到一个“自动翻译”按钮[/i]",
     "txnosupport": "[i]注意：您的语言尚未翻译。在最后一页，您会看到一个“自动翻译”按钮[/i]",
     "uebanleitung": "说明",
-    "txanleitung": "[DF]{LANGSUPPORT}1. 勾选 {txgpsauto}，以便在使用过程中自动更新您的位置（{quotes|0-}{tx_acc|3-}/{txagnihotra-}{quotes|1-} 用于更精确的定位与 GPS 时间同步）。{txgpsbutton} 会一次性确定您当前的位置并将其保存。[~LF][~LF]或者，您也可以在文本框中输入地名或地址（若您的设备支持），或输入坐标（例如 50.94, 6.96）。第 3 与第 4 项为可选：大致海拔 [m]、黄昏时的大致温度 [°C]。随后勾选 {txwelcomescr}。- 当基本数据发生变化时，{txsunclock-} 会执行一次日计算，耗时视设备而定，可能在 2[NDASH]30 秒之间。[~LF][~LF]2. {txuhrsinn} 用于设置时钟是顺时针（南）还是逆时针运行：不过如果您更改旋转方向，太阳圆圈中位于地平线下方的部分将会在您面前（详情见下一页）。{txshowclock} 会在表盘右上角显示一个数字时钟。",
-    "txmore": "[DF]3. {txfarben} 选择不同的表盘。{txnachtmodus} {txlangarr|auto-} 在日落时切换，-6° 表示暮光结束，+6° 表示之前。 [~LF][~LF]4. {txagnihotra} 显示太阳指针的标记、下一次太阳零点穿越的时间及倒计时。Agnihotra 前 6 分钟，显示会放大并显示秒数（⁺ 表示 GPS 当前有效）。{txfullscr} 防止屏幕关闭并切换到全屏。{txweathapi} 在表盘上叠加每日天气预报（需要网络）。若显示为灰色，表示数据已过期。– 若设置未生效，请点击表盘右下角的刷新按钮。[~LF][~LF]可用双指缩放表盘（或三击）。移动放大的图像时请缓慢操作，快速滑动会切换到下一页。– 下一页提供表盘说明。[DF][DF][DF][b]–– 表盘图例:[/b][DF][DF]天气：当前温度 + 上方为每日数据：降水量（χ = 雪）、日照小时、符号（仙人掌 = 干燥）及可选星期（= 明日天气），灰色 = 旧数据",
+    "txanleitung": "[DF]{LANGSUPPORT}1. 启用 {txgpsauto} 以在使用过程中自动更新您的位置。（{txgpsbutton} 仅一次性确定并保存您当前的位置。）目前不需要做更多设置。— 如需更高精度，请参见 {quotes|0-}{tx_acc|3-}/{txshowagni-}{quotes|1-}。[~LF][~LF]或者，您可以在文本框中输入地名或地址（如果设备支持），或输入坐标（例如 50.94, 6.96）。第 3 和第 4 项为可选项：大致高度 [m]、黄昏时的大致温度 [°C]。随后启用 {txwelcomescr}。— 当更改基础数据时，{txsunclock-} 会执行一次日计算，根据设备不同可能需要 2[NDASH]30 秒。[~LF][~LF]2. {txshowclock} 会在表盘右上角显示数字时钟。{txuhrsinn} 用于设置时钟是顺时针运行（南向）还是逆时针运行：当改变旋转方向时，位于地平线以下的太阳圆弧将显示在您面前（详见下一页）。",
+    "txmore": "[DF]3. {txnachtmodus} {txlangarr|auto-} 会在日落时自动切换，-6° 至暮光结束，+6° 之前。{txfarben} 用于选择不同的表盘样式。[~LF][~LF]4. {txfullscr} 防止屏幕关闭并切换到全屏模式。{txweathapi} 在时钟上叠加天气预报（需要网络，灰色 = 旧数据）。{txagnihotra} 显示太阳指针的标记以及下一次太阳零点通过的时间和倒计时。Agnihotra 前 6 分钟，显示会放大并显示秒数（⁺ = GPS 当前）。— 如果设置未被应用，请点击表盘右下角的刷新按钮。[~LF][~LF]您可以使用两指缩放表盘（或三击）。移动放大的图像时请缓慢操作，快速滑动将切换到下一页。— 下一页将提供表盘的说明。[DF][DF][DF][b]–– 表盘图例：[/b][DF][DF]天气：当前温度 + 上方为每日数据：降水（χ = 雪）、日照时数、符号（仙人掌 = 干燥），以及可选的星期几（= 明日天气），灰色 = 较旧数据",
     "txdata": "[DF]数据",
     "txlocdata": "[DF]您所在地的计算结果与天文年鉴的误差约为 0.0005 角秒³:[DF]",
     "txobjdata": "– 太阳¹ –[~LF]时间：{sun_clocktm}[~LF]时辰：{sun_temptm}[~LF]光日：{sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]至日：{sun_soli}[~LF]分点：{sun_equi}[~LF][~LF]– 月亮² –[~LF]新月：{moon_new}[~LF]满月：{moon_full}[~LF]月夜：{moon_gordon}[~LF]照明度：{moon_illum}[~LF]大小：{moon_sizep} (85-100){weather_data}[~LF][~LF]– 亮度 –[~LF]金星：{venus_magp} (83-100)[~LF]火星：{mars_magp} (52-100)[~LF]木星：{jupiter_magp} (87-100)[~LF]土星：{saturn_magp} (77-100)[~LF]水星：{merkur_magp} (0-100)[~LF][~LF]¹ 时间：GPS = 已同步 | 时辰：本地不等时（0.0[NDASH]11.9），白天为“ἡ”，夜晚为“ν”。“φ”表示夜更，不等“分钟”（0φ00[NDASH]3φ59） | {lighttime-}: 见下 | 光日与 Agnihotra：今日升[NDASH]落 [明日升]，⁺ = 当前 GPS | ² 满月与新月：时间（距今/之前天数） | 月夜：见下 | ³ 月亮视直径约为 2000 角秒 | ⁴ 天气：日内变化（太阳、进度、降雨、风），现在（= 接下来 3 小时）。– 日值：最小…最大…[夜间最低]（χ = 雪）[DF][DF]",
@@ -178,7 +178,7 @@
     "txanleitungprg": "[DF]Gordon-太阳时钟[~LF]版本 [VERSIONNUM][~LF]Gordon Axmann[~LF]版权 2019-[VERSIONYEAR]",
     "txanleitung3": "[DF]本软件是一个免费的私人项目。它经过多年的开发和维护。[DF][DF]",
     "txchangelog": "有什么新内容？",
-    "txanleitung4": "[DF]原则上，不会收集或发送任何个人数据。一切都保留在您的设备上。即使没有互联网连接也可以运行。例外情况：(1) 如果发生程序错误，在您有互联网连接的情况下，会发送一份高度匿名化的错误报告，以改进 {txsunclock-} 的稳定性。(2) 天气显示（可选，默认启用）会从外部提供商获取天气数据，并在此过程中传输您的大致位置。您可以随时停用天气显示（详情请参阅隐私政策）。[~LF][~LF]致谢：Brandon Rhodes（Skyfield）、Rolf、Greg Miller 以及所有测试人员。天体图像由以下机构提供：NASA / SOHO（太阳和日球层天文台）、ESA / 哈勃空间望远镜，以及 NASA / JPL-Caltech（公共领域）。天气数据（可选）：Open-Meteo.com（CC BY 4.0），MET Norway / Meteorologisk institutt（CC BY 4.0）。所有使用的第三方材料及其许可证列表可在文件 \"design / COPYRIGHT.txt\" 中找到。[~LF][~LF]我免费向您提供 {txsunclock}。请尽情使用它。如果您希望支持我的工作，可在此找到我的网站：[DF][DF]",
+    "txanleitung4": "[DF]原则上不会收集或有意传输任何个人数据。一切都保留在您的设备上。正常使用不需要互联网连接。例外情况：(1) 当发生软件错误时，如果存在互联网连接，会发送一份高度匿名化的错误报告，以帮助改进 {txsunclock-} 的稳定性。(2) 天气显示（默认启用）会从外部服务商获取天气数据。如果您启用 {txgpsauto-}，将使用您的大致位置（约 1 公里精度，详情请参见隐私政策）。您可以随时关闭天气显示。[~LF][~LF]致谢：Brandon Rhodes（Skyfield）、Rolf、Greg Miller 以及所有测试人员。天体图像由以下机构提供：NASA / SOHO（太阳和日光层观测站）、ESA / 哈勃太空望远镜，以及 NASA / JPL-Caltech（公有领域）。天气数据（可选）：Open-Meteo.com（CC BY 4.0），MET Norway / Meteorologisk institutt（CC BY 4.0）。所有使用的第三方材料及其许可证列表可在文件 \"design / COPYRIGHT.txt\" 中找到。[~LF][~LF]{txsunclock} 免费提供给您。请尽情使用。如果您希望支持我的工作，可在此找到我的网站：[DF][DF]",
     "txkaffee": "访问网站",
     "solcalmonthsxx": [
         "新二月%天",
