--- a/lang/zh.json
+++ b/lang/zh.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.8.14",
-        "updated": "2026-01-28 18:27:26"
+        "version": "1.8.16",
+        "updated": "2026-02-01 11:23:32"
     },
     "txwelcome": "欢迎",
     "quotes": [
@@ -106,8 +106,8 @@
     "txweathapiarr": {
         "auto": "自动",
         "-NIL-": "关闭",
-        "openmeteo": "Open-Met/Icon-D2",
-        "metno": "MET Norge"
+        "openmeteo": "Open-Meteo",
+        "metno": "Met Norge"
     },
     "txnow": "现在",
     "txd0": "今天",
@@ -154,7 +154,7 @@
     "txnosupport": "[i]注意：您的语言尚未翻译。在最后一页，您会看到一个“自动翻译”按钮[/i]",
     "uebanleitung": "说明",
     "txanleitung": "[DF]{LANGSUPPORT}1. 启用 {txgpsauto} 以在使用过程中自动更新您的位置。（{txgpsbutton} 仅一次性确定并保存您当前的位置。）目前不需要做更多设置。— 如需更高精度，请参见 {quotes|0-}{tx_acc|3-}/ {txshowagni-}{quotes|1-}。[~LF][~LF]或者，您可以在文本框中输入地名或地址（如果设备支持），或输入坐标（例如 50.94, 6.96）。第 3 和第 4 项为可选项：大致高度 &bl;m]、黄昏时的大致温度 &bl;°C]。随后启用 {txwelcomescr}。— 当更改基础数据时，{txsunclock-} 会执行一次日计算，根据设备不同可能需要 2[NDASH]30 秒。[~LF][~LF]2. {txshowclock} 会在表盘右上角显示数字时钟。{txuhrsinn} 用于设置时钟是顺时针运行（南向）还是逆时针运行：当改变旋转方向时，位于地平线以下的太阳圆弧将显示在您面前（详见下一页）。",
-    "txmore": "[DF]3. {txnachtmodus} {txlangarr|auto-} 会在日落时自动切换，-6° 至暮光结束，+6° 之前。{txfarben} 用于选择不同的表盘样式。[~LF][~LF]4. {txfullscr} 防止屏幕关闭并切换到全屏模式。{txweathapi} 在时钟上叠加天气预报（需要网络）。{txagnihotra} 显示太阳指针的标记以及下一次太阳零点通过的时间和倒计时。Agnihotra 前 6 分钟，显示会放大并显示秒数（⁺ = GPS 当前）。— 如果设置未被应用，请点击表盘右下角的刷新按钮。[~LF][~LF]您可以使用两指缩放表盘（或三击）。移动放大的图像时请缓慢操作，快速滑动将切换到下一页。— 下一页将提供表盘的说明。[DF][DF][DF][b]–– 表盘图例：[/b][DF][DF]天气：当前温度 + 上方为每日数据：降水（χ = 雪）、日照时数、符号（仙人掌 = 干燥），以及可选的星期几（= 明日天气），灰色 = 较旧数据",
+    "txmore": "[DF]3. {txnachtmodus} {txlangarr|auto-} 在日落时切换，−6° 到暮光结束，+6° 在此之前。{txfarben} 选择不同的表盘。[~LF][~LF]4. {txfullscr} 防止屏幕关闭并切换到全屏。{txweathapi} 在时钟上显示天气预报（需要网络）。{txagnihotra} 显示太阳指针的标记，以及下一次太阳过零点的时间和倒计时。Agnihotra 前六分钟显示会放大并显示秒数（⁺ = GPS 已更新）。– 如果设置未生效，请点击表盘右下角的刷新按钮。[~LF][~LF]您可以用两指放大表盘（或三次点击）。若要移动放大的图像，请缓慢操作。快速移动会切换到下一页。– 下一页将对表盘进行说明。[DF][DF][DF][b]–– 表盘图例：[/b][DF][DF]天气：当前温度，上方为每日数据（星期 = 明天）：降水量（χ = 雪）、日照时数，上方符号（仙人掌 = 干燥、耸肩 = 不确定、旗帜 = 风/风暴）；灰色 = 旧数据",
     "txlegende": "[DF][font=sdata/DejaVuSansMono.ttf]☉[/font] 太阳, [font=sdata/DejaVuSansMono.ttf]●[/font] 月亮（含月相）[~LF][~LF][font=sdata/DejaVuSansMono.ttf]♀[/font] 金星（珍珠色）, [font=sdata/DejaVuSansMono.ttf]♂[/font] 火星（偏红）, [font=sdata/DejaVuSansMono.ttf]♃[/font] 木星（条纹）, [font=sdata/DejaVuSansMono.ttf]♄[/font] 土星（有光环）, [font=sdata/DejaVuSansMono.ttf]☿[/font] 水星（灰色）[~LF][~LF]&bl;s] 天狼星, &bl;k] 南船二, &bl;f] 半人马座α, &bl;a] 大角星, &bl;w] 织女星, &bl;c] 五车二, &bl;r] 参宿七, &bl;p] 南河三, &bl;b] 参宿四, &bl;h] 水委一[DF][DF][DF][DF]",
     "txdata": "[DF]数据",
     "txlocdata": "[DF]您所在地的计算结果与天文年鉴的误差约为 0.0005 角秒³:[DF]",
@@ -170,10 +170,10 @@
     "graph_dontseparateafter": [],
     "graph_separateafter": [],
     "txmanual": "[DF]表盘",
-    "txanleitung2": "[DF]“Gordon-太阳时钟”基本上是一款单指针手表，其表盘每天都会根据自然和天体的节奏发生变化。它显示太阳的位置和星空。这是一种全新的时间显示方式，不像我们传统的时钟（采用铁路时间和夏令时）那样人为，而是随着季节的变化而变化。[~LF][~LF][i]注意：您可以在本说明和表盘之间来回滑动。[/i][~LF][~LF][~LF][b]–– 您的视线：[/b][~LF][~LF]在屏幕中央，您会看到一条水平线。这是地平线（地球表面）。中间的尖三角是您从远处看到的云杉树（或教堂）。您不是从上方俯视它，而是站在它前面。[~LF][~LF]如果您没有更改设置（“视线方向：自动”），那么在北半球，您通常会看到南方（在南半球，您会看到北方）。屏幕左侧的物体位于东方，右侧的物体位于西方（在南半球则相反）。地平线边缘标有各个方位。[~LF][~LF]地平线下的明亮条带表示民用黄昏。大块的深灰色区域代表夜晚（包括航海黄昏）。位于该区域内的物体不可见。[~LF][~LF]左下角显示当地时间，右上角显示太阳在天空中的高度（例如 27.6°），以及您的位置数字代码（例如“cri-hs”）或地点名称（如果您输入了）。下方显示不均匀的时间小时显示。",
+    "txanleitung2": "[DF]{txgordonssunclock} 本质上是一款单指针时钟，其表盘每天变化，遵循自然与天体的节律。它显示太阳位置和星空。这是一种新的时间呈现方式，不像传统时钟（铁路时间和夏令时）那样人为，而是与季节变化保持一致。[~LF][~LF][i]提示：您可以在本说明与表盘之间左右滑动。[/i][~LF][~LF][~LF][b]–– 您的视角：[/b][~LF][~LF]在屏幕中央可以看到一条水平线，这就是地平线（地球表面）。中央的尖三角代表远处的一棵云杉（或一座教堂）。您不是从上方俯视，而是站在它前方。[~LF][~LF]如果未更改设置（“视角方向：自动”），在北半球通常面向南方（南半球则面向北方）。屏幕左侧为东方，右侧为西方（南半球相反）。地平线边缘标示着方位。[~LF][~LF]地平线下方较亮的区域表示民用暮光。大片深灰色区域象征夜晚（包括航海暮光）。位于该区域的天体不可见。[~LF][~LF]右上角显示本地时间（可选）、太阳高度（单位：度，例如 27.6°），以及您的位置字符代码（如“cri-hs”）或您输入的地名。下方显示不等长的时辰时间。",
     "txanleitung2b": "[DF][DF][b]–– 太阳：[/b][~LF][~LF]太阳（在时钟唯一指针的末端）在一天中从左向右移动（南半球相反）。太阳在屏幕上越靠左，就越偏东；越靠右，就越偏西（南半球相反）。太阳在屏幕上显示得越高，就表示它在天空中的高度越高。[~LF][~LF]太阳沿着绘制的圆形轨迹运行，表示它在一天内的运动路径。圆轨迹的边缘标有小时（例如 „12“），因此这条圆轨迹也充当表盘。[~LF][~LF]例如，您可以在表盘上看到：在夏令时切换期间数字如何移动，而圆轨迹本身保持不变。或者：在大多数地点，法定时间如何偏离当地时间，因为 12 点并不正好位于表盘顶部。时辰（temporal hours）则不同：在第 12 时（12ἡ）总是日落。[~LF][~LF][~LF][b]–– 月亮：[/b][~LF][~LF]月亮也有一条圆形轨迹，以浅灰色绘制。由于月亮完成一圈需要超过 24 小时，因此会用更浅的灰色额外附加前一天的 1.5 小时。若您“与这只钟一起生活”，就能清楚看到月亮在 27 天内如何越升越高、又逐渐降低。此外，您还能观察到：在满月时，它在圆圈上与太阳处于相对位置（远离太阳）；而在新月时，它处于同一圆圈位置（靠近太阳）。通常并非完全相同的位置，因为视角是侧向的（不是从上往下）。只有在日食时才会完全重合。[~LF][~LF]满月与新月会用阴影标记。新月会显示 35 小时（因为这段时间月亮无论如何都看不见）。满月会显示 24 小时。太阳与月亮轨迹的重新计算每天在 UTC 00:00 进行。",
     "txanleitung2c": "[DF][DF][b]–– 行星：[/b][~LF][~LF]会显示五颗肉眼可见的行星，并配有照片（就像用双筒望远镜看到的那样），或者（取决于设计）以它们的天文符号表示（见上一页）。当您观察真实的夜空时，可以通过“行星不会闪烁，而是稳定发光”来区分行星与恒星。行星在天空中看起来比遥远的恒星明显更大，因此受大气密度波动的影响也更小。[~LF][~LF][~LF][b]–– 恒星：[/b][~LF][~LF]另外还会显示十颗最亮的恒星，用“方框中的字母”表示（图例见上一页）。行星相对更有规律，通常或多或少位于太阳轨迹附近；而恒星的轨迹与太阳无关——它们本身就是自己的太阳。恒星符号中，方框的两条边会比另外两条画得更粗，这表示它们当前所在轨迹的角落或象限。如果突出显示的角在右下方，恒星（或多或少）位于其轨迹“末端”的右下方向。随后它的运动将主要朝左上方移动（也常常会移出屏幕）。如果上边更粗，恒星在您面前；如果下边更粗，则在您身后（前提是您没有更改旋转方向）。",
-    "txanleitung2d": "[DF][DF][b]–– 历史：[/b][~LF][~LF]2019 年，我为树莓派开发了配备 10 英寸电子纸显示屏的Gordon-太阳时钟，因为我想拥有一款外观美观且能将时间与太阳运行相结合的挂钟。我的目标是制造一款显示自然时间（而不是 12 小时模拟时钟所显示的人造时间）的时钟。在我们居住的地方，一年中的白天长度存在明显差异，而且还有反复出现且不受欢迎的时间调整。太阳时钟应该把这一切都表现出来：它有一个有机表盘，根据季节和自然节奏变化。现在，几乎每个人口袋里都有一个小电脑，所以我把 2025 太阳时钟做成了安卓应用。希望它能给你带来快乐和新发现！[DF][DF][DF]",
+    "txanleitung2d": "[DF][DF][b]–– 天气：[/b][~LF][~LF]左下角可显示本地天气预报：显示当前温度以及当天的降水量和日照时数。当天的主要特征还通过符号表示：晴朗、多阳光、干燥、不确定、下雨、大雨、下雪、无风、有风、风暴。– 雨的符号表示当天确实以降雨为主（6[NDASH]18 时），而非零星小雨。没有符号表示表示当天没有明显的天气特征。[~LF][~LF][~LF][b]–– 历史：[/b][~LF][~LF]{txgordonssunclock} 是二十多年时间研究的成果。最初是一款机械有机时钟，采用 24 小时表盘，并按月份显示日出与日落时间。由此发展出太阳时钟的概念，先是可行性研究和 ePaper 挂钟，随后加入了天气显示和 GPS。对位置灵活版本的设想最终形成了这款 Android 应用。[~LF][~LF]本项目的目标，是一种以太阳运行和自然昼夜、年度周期为导向的时间呈现方式——让人重新连接自然，以及我们自身的内在、昼夜节律时间。祝您使用愉快！[DF][DF][DF]",
     "txabout": "[DF]信息",
     "txanleitungprg": "[DF]Gordon-太阳时钟[~LF]版本 [VERSIONNUM][~LF]Gordon Axmann[~LF]版权 2019-[VERSIONYEAR]",
     "txanleitung3": "[DF]本软件是一个免费的私人项目。它经过多年的开发和维护。[DF][DF]",
