Änderungen von Rechner 1 (V2)

--- a/lang/zh.json
+++ b/lang/zh.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.8.18",
-        "updated": "2026-02-04 11:57:14"
+        "version": "1.8.19",
+        "updated": "2026-02-08 11:54:30"
     },
     "txwelcome": "欢迎",
     "quotes": [
@@ -31,14 +31,14 @@
     ],
     "lighttime": "[DF]光之季",
     "solcal_lph": [
-        "光增 (%)",
-        "进入光明 (%)",
-        "光之静息 (%)",
-        "告别光明 (%)",
-        "光减 (%)",
-        "进入黑暗 (%)",
-        "暗之静息 (%)",
-        "告别黑暗 (%)"
+        "光增 / 春季节气 (%)",
+        "进入光明 / 立夏 (%)",
+        "光之静息 / 夏至 (%)",
+        "告别光明 / 大暑 (%)",
+        "光减 / 秋季节气 (%)",
+        "进入黑暗 / 立冬 (%)",
+        "暗之静息 / 冬至 (%)",
+        "告别黑暗 / 大寒 (%)"
     ],
     "moon": "月",
     "xxdays": {
@@ -153,13 +153,13 @@
     "txpartsupport": "[i]注意：(β) 此语言仅提供部分支持。因此，部分内容为英文。欢迎提供支持（Github）。- 在最后一页，您会看到一个“自动翻译”按钮[/i]",
     "txnosupport": "[i]注意：您的语言尚未翻译。在最后一页，您会看到一个“自动翻译”按钮[/i]",
     "uebanleitung": "说明",
-    "txanleitung": "[DF]{LANGSUPPORT}1. 启用 {txgpsauto} 以在使用过程中自动更新您的位置。（{txgpsbutton} 仅一次性确定并保存您当前的位置。）目前不需要做更多设置。— 如需更高精度，请参见 {quotes|0-}{tx_acc|3-}/ {txshowagni-}{quotes|1-}。[~LF][~LF]或者，您可以在文本框中输入地名或地址（如果设备支持），或输入坐标（例如 50.94, 6.96）。第 3 和第 4 项为可选项：大致高度 &bl;m]、黄昏时的大致温度 &bl;°C]。随后启用 {txwelcomescr}。— 当更改基础数据时，{txsunclock-} 会执行一次日计算，根据设备不同可能需要 2[NDASH]30 秒。[~LF][~LF]2. {txshowclock} 会在表盘右上角显示数字时钟。{txuhrsinn} 用于设置时钟是顺时针运行（南向）还是逆时针运行：当改变旋转方向时，位于地平线以下的太阳圆弧将显示在您面前（详见下一页）。",
-    "txmore": "[DF]3. {txnachtmodus} {txlangarr|auto-} 在日落时切换，−6° 到暮光结束，+6° 在此之前。{txfarben} 选择不同的表盘。[~LF][~LF]4. {txfullscr} 防止屏幕关闭并切换到全屏。{txweathapi} 在时钟上显示天气预报（需要网络）。{txagnihotra} 显示太阳指针的标记，以及下一次太阳过零点的时间和倒计时。Agnihotra 前六分钟显示会放大并显示秒数（⁺ = GPS 已更新）。– 如果设置未生效，请点击表盘右下角的刷新按钮。[~LF][~LF]您可以用两指放大表盘（或三次点击）。若要移动放大的图像，请缓慢操作。快速移动会切换到下一页。– 下一页将对表盘进行说明。[DF][DF][DF][b]–– 表盘图例：[/b][DF][DF]天气：当前温度，上方为每日数据（星期 = 明天）：降水量（χ = 雪）、日照时数，上方符号（仙人掌 = 干燥、耸肩 = 不确定、旗帜 = 风/风暴）；灰色 = 旧数据",
-    "txlegende": "[DF][font=sdata/DejaVuSansMono.ttf]☉[/font] 太阳, [font=sdata/DejaVuSansMono.ttf]●[/font] 月亮（含月相）[~LF][~LF][font=sdata/DejaVuSansMono.ttf]♀[/font] 金星（珍珠色）, [font=sdata/DejaVuSansMono.ttf]♂[/font] 火星（偏红）, [font=sdata/DejaVuSansMono.ttf]♃[/font] 木星（条纹）, [font=sdata/DejaVuSansMono.ttf]♄[/font] 土星（有光环）, [font=sdata/DejaVuSansMono.ttf]☿[/font] 水星（灰色）[~LF][~LF]&bl;s] 天狼星, &bl;k] 南船二, &bl;f] 半人马座α, &bl;a] 大角星, &bl;w] 织女星, &bl;c] 五车二, &bl;r] 参宿七, &bl;p] 南河三, &bl;b] 参宿四, &bl;h] 水委一[DF][DF][DF][DF]",
+    "txanleitung": "[DF]{LANGSUPPORT}1. 勾选 {txgpsauto}，以在使用期间自动更新您的位置。({txgpsbutton} 会一次性确定并保存当前坐标。) 目前不需要更多设置。– 如需更高精度，请参见 {quotes|0-}4. {txshowagni-}{quotes|1-}.[~LF][~LF]或者，您也可以在文本框中输入地名或地址（如果设备支持），或直接输入坐标（例如 50.94, 6.96）。第 3 和第 4 项为可选：大致海拔 &bl;m]，黄昏时的大致温度 &bl;°C]。随后勾选 {txwelcomescr}。– 当基础数据发生变化时，{txsunclock-} 会执行一次日计算，根据设备不同可能需要 2[NDASH]30 秒。[~LF][~LF]2. {txshowclock} 会在表盘右上角显示数字时钟。{txuhrsinn} 用于设置时钟是顺时针（南方）还是逆时针运行：当改变旋转方向时，位于地平线以下的太阳圆环部分会显示在您面前（详见下一页）。",
+    "txmore": "[DF]3. {txnachtmodus} {txlangarr|auto-} 在日落时切换，在 −6° 到暮光结束之间，以及其前 +6°。{txfarben} 用于选择不同的表盘。[~LF][~LF]4. {txfullscr} 防止屏幕关闭并切换到全屏模式。{txweathapi} 在时钟上叠加天气预报（见下文，需要网络）。{txagnihotra} 显示太阳指针的标记，以及下一次太阳零点通过的时间 & 倒计时。Agnihotra 前 6 分钟，显示会放大并显示秒数（⁺ = GPS 为当前）。– 如果设置未被应用，请点击表盘右下角的刷新按钮。[~LF][~LF]您可以用两根手指放大表盘（或三次点击）。如需移动放大的图像，请缓慢操作。快速滑动会切换到下一页。– 下一页包含表盘的详细说明。[DF]",
+    "txlegende": "[DF][b]–– 表盘图例：[/b][~LF][~LF][font=sdata/DejaVuSansMono.ttf]☉[/font] 太阳，[font=sdata/DejaVuSansMono.ttf]●[/font] 月亮（含月相）[~LF][~LF][font=sdata/DejaVuSansMono.ttf]♀[/font] 金星（珠光色），[font=sdata/DejaVuSansMono.ttf]♂[/font] 火星（偏红），[font=sdata/DejaVuSansMono.ttf]♃[/font] 木星（条纹），[font=sdata/DejaVuSansMono.ttf]♄[/font] 土星（带光环），[font=sdata/DejaVuSansMono.ttf]☿[/font] 水星（灰色）[~LF][~LF]&bl;s] 天狼星，&bl;k] 南河三，&bl;f] 半人马座α，&bl;a] 大角星，&bl;w] 织女星，&bl;c] 五车二（Capella），&bl;r] 参宿七（Rigel），&bl;p] 南河三（Procyon），&bl;b] 参宿四（Betelgeuse），&bl;h] 水委一（Achernar）[~LF][~LF]天气：当前温度，其上为每日数据：降水（χ = 雪）、日照时数，其上为符号（仙人掌 = 干燥，耸肩 = 不确定，旗帜 = 风/风暴）；星期 = 明天；灰色 = 旧数据[DF][DF][DF]",
     "txdata": "[DF]数据",
     "txlocdata": "[DF]您所在地的计算结果与天文年鉴的误差约为 0.0005 角秒³:[DF]",
-    "txobjdata": "– 太阳¹ –[~LF]时间: {sun_clocktm}[~LF]不等时小时: {sun_temptm}[~LF]光照日: {sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]至日: {sun_soli}[~LF]分点: {sun_equi}[~LF][~LF]– 月亮² –[~LF]新月: {moon_new}[~LF]满月: {moon_full}[~LF]月夜: {moon_gordon}[~LF]照明度: {moon_illum}[~LF]大小: {moon_sizep} (85-100){weather_data}[~LF][~LF]– 亮度 –[~LF]金星: {venus_magp} (83-100)[~LF]火星: {mars_magp} (52-100)[~LF]木星: {jupiter_magp} (87-100)[~LF]土星: {saturn_magp} (77-100)[~LF]水星: {merkur_magp} (0-100)[~LF][~LF]¹ 时间: GPS = 已同步 | 不等时小时: 当地不等长小时 (0,0[NDASH]11,9)，白天为“ἡ”，夜晚为“ν”。“φ”为夜更，不等“分钟” (0φ00[NDASH]3φ59) | {lighttime-}: 见下文 | 光照日与阿耆尼火祭: 今日升起[NDASH]落下 [明日升起]，⁺ = 当前 GPS | ² 满月与新月: 时间（距今/之前 天） | 月夜: 见下文 | ³ 月亮视直径约 2000 角秒 | ⁴ 天气: 日内变化（太阳、进度、降雨、阵风），现在（= 接下来 3 小时，[font=sdata/DejaVuSansMono.ttf]✝[/font] = 较旧数据）。- 日值: 最低...最高...[夜间最低] (χ = 雪)[DF][DF]",
-    "txlegende0": "[b]–– 说明:[/b][~LF][~LF]光之年季将一年分为八个光照增强与减弱的阶段（阶段进度百分比）：1. {solcal_lph|0-} (4.2.–5.5.), 2a. {solcal_lph|1-} (6.5.–20.5.), 2b. {solcal_lph|2-} (21.5.–21.7.), 2c. {solcal_lph|3-} (22.7.–6.8.), 3. {solcal_lph|4-} (7.8.–6.11.), 4a. {solcal_lph|5-} (7.11.–21.11.), 4b. {solcal_lph|6-} (22.11.–19.1.)，以及 4c. {solcal_lph|7-} (20.1.–3.2.)。简写：Φx·y。日期基于天文节点，可能与日历略有偏差。[~LF][~LF]月日期类似于我们的日期，但以夜代日：Μx·y (p/z)，其中 x = 年内的月“月”，y = 月内的夜。由于月月长度不同，z 表示该月的总夜数，p 表示满月之夜。夜晚在日出时结束。[DF][DF][DF]",
+    "txobjdata": "– 太阳¹ –[~LF]时间: {sun_clocktm}[~LF]时辰（不等时）: {sun_temptm}[~LF]昼光时段: {sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]至日: {sun_soli}[~LF]分点: {sun_equi}[~LF][~LF]– 月亮² –[~LF]新月: {moon_new}[~LF]满月: {moon_full}[~LF]月夜: {moon_gordon}[~LF]照明度: {moon_illum}[~LF]大小: {moon_sizep} (85-100){weather_data}[~LF][~LF]– 亮度 –[~LF]金星: {venus_magp} (83-100)[~LF]火星: {mars_magp} (52-100)[~LF]木星: {jupiter_magp} (87-100)[~LF]土星: {saturn_magp} (77-100)[~LF]水星: {merkur_magp} (0-100)[~LF][~LF]¹ 时间: GPS = 已同步 | 时辰（不等时）: 当地不等时（0,0[NDASH]11,9），白昼为「ἡ」，夜晚为「ν」。 「φ」为夜更，采用不等“分钟”（0φ00[NDASH]3φ59） | {lighttime-}: 见下文 | 昼光时段 与 Agnihotra: 今日 日出[NDASH]日落 [明日日出]，⁺ = 当前 GPS | ² 满月与新月: 时刻（距今/之前 天） | 月夜: 见下文 | ³ 月亮视直径约为 2000 角秒 | ⁴ 天气: 日变化（太阳、进度、降雨、阵风），当前 (= 接下来 3 小时，[font=sdata/DejaVuSansMono.ttf]✝[/font] = 较旧数据)。 | 日值: 最低...最高...[夜间最低] (χ = 雪)[DF][DF]",
+    "txlegende0": "[b]–– 说明:[/b][~LF][~LF]月历日期的工作方式类似于我们的日期，但以夜晚代替白天：Μx·y (p/z)，其中 x = 年内的月“月”，y = 该月的夜晚编号。由于朔望月长度不同，z 表示该月的总夜数，p 表示满月之夜。夜晚在日出时结束。[~LF][~LF]光照年周期将一年划分为八个光照增加与减少的阶段（阶段进度的百分比）：1. {solcal_lph|0-} ({solcal_dat0}，另见 Imbolc)，2a. {solcal_lph|1-} ({solcal_dat1}，另见 Lixia)，2b. {solcal_lph|2-} ({solcal_dat2})，2c. {solcal_lph|3-} ({solcal_dat3})，3. {solcal_lph|4-} ({solcal_dat4}，另见 Lughnasadh)，4a. {solcal_lph|5-} ({solcal_dat5}，另见 Lidong)，4b. {solcal_lph|6-} ({solcal_dat6})，以及 4c. {solcal_lph|7-} ({solcal_dat7})。简写形式：Φx·y。日期以天文学方式确定，并会逐年移动。[DF][DF][DF]",
     "buttonsolcal": "光照日历",
     "char_vowels": "",
     "char_consonants": "",
@@ -173,7 +173,7 @@
     "txanleitung2": "[DF]{txgordonssunclock} 本质上是一款单指针时钟，其表盘每天变化，遵循自然与天体的节律。它显示太阳位置和星空。这是一种新的时间呈现方式，不像传统时钟（铁路时间和夏令时）那样人为，而是与季节变化保持一致。[~LF][~LF][i]提示：您可以在本说明与表盘之间左右滑动。[/i][~LF][~LF][~LF][b]–– 您的视角：[/b][~LF][~LF]在屏幕中央可以看到一条水平线，这就是地平线（地球表面）。中央的尖三角代表远处的一棵云杉（或一座教堂）。您不是从上方俯视，而是站在它前方。[~LF][~LF]如果未更改设置（“视角方向：自动”），在北半球通常面向南方（南半球则面向北方）。屏幕左侧为东方，右侧为西方（南半球相反）。地平线边缘标示着方位。[~LF][~LF]地平线下方较亮的区域表示民用暮光。大片深灰色区域象征夜晚（包括航海暮光）。位于该区域的天体不可见。[~LF][~LF]右上角显示本地时间（可选）、太阳高度（单位：度，例如 27.6°），以及您的位置字符代码（如“cri-hs”）或您输入的地名。下方显示不等长的时辰时间。",
     "txanleitung2b": "[DF][DF][b]–– 太阳：[/b][~LF][~LF]太阳（在时钟唯一指针的末端）在一天中从左向右移动（南半球相反）。太阳在屏幕上越靠左，就越偏东；越靠右，就越偏西（南半球相反）。太阳在屏幕上显示得越高，就表示它在天空中的高度越高。[~LF][~LF]太阳沿着绘制的圆形轨迹运行，表示它在一天内的运动路径。圆轨迹的边缘标有小时（例如 „12“），因此这条圆轨迹也充当表盘。[~LF][~LF]例如，您可以在表盘上看到：在夏令时切换期间数字如何移动，而圆轨迹本身保持不变。或者：在大多数地点，法定时间如何偏离当地时间，因为 12 点并不正好位于表盘顶部。时辰（temporal hours）则不同：在第 12 时（12ἡ）总是日落。[~LF][~LF][~LF][b]–– 月亮：[/b][~LF][~LF]月亮也有一条圆形轨迹，以浅灰色绘制。由于月亮完成一圈需要超过 24 小时，因此会用更浅的灰色额外附加前一天的 1.5 小时。若您“与这只钟一起生活”，就能清楚看到月亮在 27 天内如何越升越高、又逐渐降低。此外，您还能观察到：在满月时，它在圆圈上与太阳处于相对位置（远离太阳）；而在新月时，它处于同一圆圈位置（靠近太阳）。通常并非完全相同的位置，因为视角是侧向的（不是从上往下）。只有在日食时才会完全重合。[~LF][~LF]满月与新月会用阴影标记。新月会显示 35 小时（因为这段时间月亮无论如何都看不见）。满月会显示 24 小时。太阳与月亮轨迹的重新计算每天在 UTC 00:00 进行。",
     "txanleitung2c": "[DF][DF][b]–– 行星：[/b][~LF][~LF]会显示五颗肉眼可见的行星，并配有照片（就像用双筒望远镜看到的那样），或者（取决于设计）以它们的天文符号表示（见上一页）。当您观察真实的夜空时，可以通过“行星不会闪烁，而是稳定发光”来区分行星与恒星。行星在天空中看起来比遥远的恒星明显更大，因此受大气密度波动的影响也更小。[~LF][~LF][~LF][b]–– 恒星：[/b][~LF][~LF]另外还会显示十颗最亮的恒星，用“方框中的字母”表示（图例见上一页）。行星相对更有规律，通常或多或少位于太阳轨迹附近；而恒星的轨迹与太阳无关——它们本身就是自己的太阳。恒星符号中，方框的两条边会比另外两条画得更粗，这表示它们当前所在轨迹的角落或象限。如果突出显示的角在右下方，恒星（或多或少）位于其轨迹“末端”的右下方向。随后它的运动将主要朝左上方移动（也常常会移出屏幕）。如果上边更粗，恒星在您面前；如果下边更粗，则在您身后（前提是您没有更改旋转方向）。",
-    "txanleitung2d": "[DF][DF][b]–– 天气：[/b][~LF][~LF]左下角可显示本地天气预报：显示当前温度以及当天的降水量和日照时数。当天的主要特征还通过符号表示：晴朗、多阳光、干燥、不确定、下雨、大雨、下雪、无风、有风、风暴。– 雨的符号表示当天确实以降雨为主（6[NDASH]18 时），而非零星小雨。没有符号表示表示当天没有明显的天气特征。[~LF][~LF][~LF][b]–– 历史：[/b][~LF][~LF]{txgordonssunclock} 是二十多年时间研究的成果。最初是一款机械有机时钟，采用 24 小时表盘，并按月份显示日出与日落时间。由此发展出{txsunclock-}的概念，先是可行性研究和 ePaper 挂钟，随后加入了天气显示和 GPS。对位置灵活版本的设想最终形成了这款 Android 应用。[~LF][~LF]本项目的目标，是一种以太阳运行和自然昼夜、年度周期为导向的时间呈现方式——让人重新连接自然，以及我们自身的内在、昼夜节律时间。祝您使用愉快！[DF][DF][DF]",
+    "txanleitung2d": "[DF][DF][b]–– 天气:[/b][~LF][~LF]在左下角可以叠加显示本地天气预报（详见上一页下方）。它以克制的方式通过符号呈现当天的天气特征：例如，雨表示实际降雨（6[NDASH]18 时），而非零星细雨（类似还有：晴朗、多阳光、干燥、不确定、多雨、降雪、无风、有风、风暴）。没有符号表示天气状况平稳、无明显特征。[~LF][~LF][~LF][b]–– 历史:[/b][~LF][~LF]{txgordonssunclock} 是二十多年时间表示研究的成果。起点是一台机械式管风琴钟，具有 24 小时表盘以及按月份变化的日出与日落显示。在此基础上发展出了 {txsunclock-} 的概念，最初作为可行性研究和 ePaper 墙钟；随后加入了天气显示和 GPS。对位置灵活版本的设想最终形成了这款 Android 应用。[~LF][~LF]本项目的目标，是一种以太阳运行以及自然的日、年循环为导向的时间表示方式——作为人类重新连接自然与自身内在昼夜节律时间的一种途径。祝您从中获得乐趣与洞见！[DF][DF][DF]",
     "txabout": "[DF]信息",
     "txanleitungprg": "[DF]Gordon-太阳时钟[~LF]版本 [VERSIONNUM][~LF]Gordon Axmann[~LF]版权 2019-[VERSIONYEAR]",
     "txanleitung3": "[DF]本软件是一个免费的私人项目。请按其原样使用。原则上不收集或传输任何个人数据。运行不需要互联网连接。有关可选功能（天气显示、地名解析）、错误报告和更新检查的详细信息，请参阅隐私政策。[DF][DF]",
